# flipdot

./: .gitignore  DRIVER_README.md  PATTERNS_AND_ANIMATIONS.md  README.md  config.dev.json  demo-clock.py  demo-scroll.py  pyproject.toml  server.py  server_schema.json  test_fonts.py
.github/workflows/: checks.yml  release.yml
.zed/: settings.json
examples/: generate_content.py  text_display.py
flipdot/: DotMatrix.py  RPI-QUICK-REFERENCE.md  RPI-SETUP.md  State.py  __init__.py  client.py  config.example.json  create_app.py  flipdot.service  hardware.py  install-rpi.sh  layout.py  logging_config.py  main.py  models.py  queue.py  server.py  server_schema.json  text.py  types.py  util.py
flipdot/cli/: server.py
flipdot/display_mode/: BaseDisplayMode.py  Clock.py  ScrollText.py  Weather.py  Wipe.py  __init__.py  solid.py
flipdot/driver/: client.py  config.py  hardware.py  main.py  models.py  queue.py  server.py
flipdot/font/: DotFont.py  README.md  __init__.py  exceptions.py  prerender_fonts.py
flipdot/font/fonts/: axion-6x7-dotmap-license.txt  axion-6x7-dotmap-readme.txt  cg-pixel-4x5-readme.txt  hanover-6x13m-dotmap-license.txt  hanover-6x13m-dotmap-readme.txt  twinvision-4x6-dotmap-license.txt  twinvision-4x6-dotmap-readme.txt
flipdot/font/rendered/: axion_6x7.json  cg_pixel_4x5.json  hanover_6x13m.json
flipdot/mode/: BaseDisplayMode.py  Clock.py  DotClock.py  ScrollText.py  Weather.py  __init__.py  solid.py
flipdot/tests/: test_driver.py
flipdot/vend/: __init__.py  flippydot.py
frontend/: bun.lockb  eslint.config.js  package.json  postcss.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: index.ts  schema.d.ts  types.ts
frontend/src/components/: Display.tsx  DisplayModeForm.tsx  Loading.tsx  Picker.tsx
frontend/src/components/config/: ConfigContext.tsx  ConfigProvider.tsx  useConfig.tsx
frontend/src/components/display/: Display.tsx  DisplayModeSelector.tsx
frontend/src/components/ui/: color-mode.tsx  (+1 more)
scripts/: bump-version  codegen  codegen.py  dev.sh  start
tests/: test_driver.py
tests/flipdot/: __init__.py  test_create_app.py  test_dot_matrix.py  test_text.py
tests/flipdot/mode/: __init__.py  test_clock.py  test_solid.py
val-server/: .vtignore  CLAUDE.md  CONTENT_SERVER_SPEC.md  CONTENT_SERVER_SPEC_V3.md  deno.json  dev.ts  httpEndpoint.ts
val-server/.vt/: state.json
val-server/backend/: auth.ts  index.ts  storage.ts
val-server/backend/content/: clock.ts  paint.ts  router.ts  text.ts  types.ts
val-server/backend/patterns/: content.ts  generators.ts  render.ts  transitions.ts  types.ts
val-server/backend/rendering/: bits.ts  font-loader.ts  font.ts  frame.ts
val-server/frontend/: App.tsx  index.html  index.tsx
val-server/frontend/components/: AddItemModal.tsx  ControlPanel.tsx  Display.tsx  LoginForm.tsx  PaintCanvas.tsx  PlaylistBuilder.tsx  StatusMessage.tsx
val-server/frontend/hooks/: useAuth.ts
val-server/frontend/providers/: QueryProvider.tsx
val-server/frontend/services/: api.ts
val-server/frontend/types/: playlist.ts
val-server/shared/: types.ts
