[tool.poetry]
name = "flipdot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
freetype-py = "^2.5.1"
numpy = "^2.2.2"
pyserial = "^3.5"
fastapi = "^0.115.7"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pendulum = "^3.0.0"


[tool.poetry.group.dev.dependencies]
typing-extensions = "^4.12.2"
isort = "^5.13.2"
black = "^24.10.0"
types-requests = "^2.32.0.20241016"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
